--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -35,9 +35,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VALIDATION_VERSION = '0.2.0dev'\n",
+    "VALIDATION_VERSION = '0.3.0'\n",
     "ANOSPP_VERSION = '4.0'\n",
-    "BIOSCAN_VERSION = '3.0'"
+    "# V2.0, but V3 in SOP\n",
+    "BIOSCAN_VERSION = '3'"
    ]
   },
   {
@@ -414,7 +415,7 @@
     "    \n",
     "    regexs = {\n",
     "        'CATCH_LOT': (r'^C\\d{3}[A-Z]$|^NOT_APPLICABLE$', \n",
-    "                      'like C123A'),\n",
+    "                      'like C123A or NOT_APPLICABLE'),\n",
     "        'DATE_OF_COLLECTION': (date_regex, 'in YYYY-MM-DD format'),\n",
     "        'DECIMAL_LATITUDE': (r'^[-+]?([0-8]\\d|\\d)(\\.\\d+)?$', \n",
     "                             'between -90 and 90'),\n",
@@ -429,8 +430,8 @@
     "        'DATE_OF_PLATING': (date_regex, 'in YYYY-MM-DD format'),\n",
     "        'DATE_OF_PRESERVATION': (date_regex, 'in YYYY-MM-DD format'),\n",
     "        'ELEVATION': (numeric_regex, 'only a number (in metres)'),\n",
-    "        'DNA_EXTRACT_VOLUME_PROVIDED': (numeric_regex, 'a number (in microlitres)'),\n",
-    "        'DNA_EXTRACT_CONCENTRATION': (numeric_regex, 'a number (in nanograms per microlitre)')\n",
+    "        'DNA_EXTRACT_VOLUME_PROVIDED': (numeric_regex, 'only a number (in microlitres)'),\n",
+    "        'DNA_EXTRACT_CONCENTRATION': (numeric_regex, 'only a number (in nanograms per microlitre)')\n",
     "    }\n",
     "    \n",
     "    is_valid_regex = series.str.match(regexs[col][0])\n",
@@ -477,11 +478,12 @@
     "        possible_partner_codes = plate_prefixes.value_counts().index.to_list()\n",
     "        if len(possible_partner_codes) > 1:\n",
     "            logging.error(f'only one plate ID prefix expected, found multiple: {possible_partner_codes}')\n",
-    "        selected_partner_code = possible_partner_codes[-1]\n",
+    "        # selecting most frequent prefix as partner code\n",
+    "        selected_partner_code = possible_partner_codes[0]\n",
     "        selected_partner_df = partners_df.query(f'partner_code == \"{selected_partner_code}\"')\n",
     "        if selected_partner_df.shape[0] == 0:\n",
-    "            logging.error(f'partner code {selected_partner_code} not found in {bioscan_partners_fn}, '\n",
-    "                          f'using \"Sanger Institute\" as default partner')\n",
+    "            logging.error(f'plate name prefix {selected_partner_code} not found in {bioscan_partners_fn} '\n",
+    "                          f'as partner code, using \"Sanger Institute\" as default partner')\n",
     "            gal = \"Sanger Institute\"\n",
     "        else:\n",
     "            gal = selected_partner_df['gal'].iloc[0]\n",
@@ -552,7 +554,7 @@
     "    expected_wells = [r + str(c) for (c,r) in itertools.product(col_id, row_id)]\n",
     "    \n",
     "    blank_wells = {\n",
-    "        'PLATE_ONLY':['G12','H12'], # v2\n",
+    "        'PLATE_ONLY':['H12'], # v2\n",
     "        'PLATE_ONLY_1_BLANK':['H12'], # v3\n",
     "        'PLATE_ONLY_2_BLANKS':['G12','H12'], # v3\n",
     "    }\n",
@@ -709,8 +711,8 @@
     "    asterisk_to_strip = (series.str.startswith(\"*\") & series.str.endswith(\"*\"))\n",
     "    if asterisk_to_strip.any():\n",
     "        asterisk_series = index_ranges(series[asterisk_to_strip])\n",
-    "        logging.warning(f'{col} column, SERIES {asterisk_series}: '\n",
-    "                        f'stripping asterisks from {series[asterisk_to_strip].unique()}')\n",
+    "        logging.info(f'{col} column, SERIES {asterisk_series}: '\n",
+    "                        f'stripping asterisks from {series[asterisk_to_strip].unique()} for output')\n",
     "        series = series.str.strip('*')\n",
     "    df[col] = series\n",
     "    return df"
@@ -1189,7 +1191,8 @@
     "    df['REGULATORY_COMPLIANCE'] = 'Y'\n",
     "    df['HAZARD_GROUP'] = 'HG1'\n",
     "    if bioscan and v == 'v2':\n",
-    "        logging.info('auto-filling CATCH_SOLUTION and AMOUNT_OF_CATCH_PLATED columns for bioscan manifest v2')\n",
+    "        logging.info('auto-filling CATCH_SOLUTION as 100%_ETHANOL and AMOUNT_OF_CATCH_PLATED as '\n",
+    "                     'ALL_SPECIMENS_PLATED columns for bioscan manifest v2')\n",
     "        df['CATCH_SOLUTION'] = '100%_ETHANOL'\n",
     "        df['AMOUNT_OF_CATCH_PLATED'] = 'ALL_SPECIMENS_PLATED'\n",
     "        if (df['IDENTIFIER_AFFILIATION'] != '').any():\n",
@@ -1214,13 +1217,6 @@
     "\n",
     "# add_sts_cols(df, contrib_df, gal='Sanger Institute');"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
