--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -36,7 +36,7 @@
     "    setup_logging(verbose=verbose)\n",
     "\n",
     "    logging.info(f'# partner manifest validation v.{VALIDATION_VERSION}')\n",
-    "    logging.info(f'# validating ANOSPP manifest v.{ANOSPP_VERSION}')\n",
+    "    logging.info(f'# validating against ANOSPP manifest v.{ANOSPP_VERSION}')\n",
     "    logging.info(f'# manifest \"{fn}\"')\n",
     "\n",
     "    # read data\n",
@@ -117,7 +117,7 @@
     "    if write_sts:\n",
     "        write_sts_manifest(df, fn, VALIDATION_VERSION)\n",
     "\n",
-    "    logging.info('# ended validate_anospp_partner_manifest_v.{}'.format(ANOSPP_VERSION))\n",
+    "    logging.info('# ended validate_anospp_partner_manifest')\n",
     "    \n",
     "    return df\n",
     "\n",
