fix plate-only check logic

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20230817_js_batch8/NBGW-2023-Manifest-2023-08-14.xlsx'\n",
+    "fn = '../results/20230823_js_batch9/NMCC_2304_BIOSCAN_Manifest_V2.0.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', verbose=False)"
    ]
   },
