--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VALIDATION_VERSION = '0.3.0'\n",
+    "VALIDATION_VERSION = '0.3.0dev'\n",
     "ANOSPP_VERSION = '4.0'\n",
     "# V2.0, but V3 in SOP\n",
     "BIOSCAN_VERSION = '3'"
@@ -143,12 +143,11 @@
     "    # IDENTIFIER_AFFILIATION in v2, not in v3 - not checking as dropped from output\n",
     "    \n",
     "    # blank samples conventions\n",
-    "    v3_plate_only = (('PLATE_ONLY_1_BLANK' in df['TUBE_OR_WELL_ID']) \n",
-    "                     or ('PLATE_ONLY_2_BLANKS' in df['TUBE_OR_WELL_ID']))\n",
-    "    if 'PLATE_ONLY' in df['TUBE_OR_WELL_ID']:\n",
+    "    v3_plate_only = ((df['TUBE_OR_WELL_ID'] == 'PLATE_ONLY_1_BLANK').any()\n",
+    "                     or (df['TUBE_OR_WELL_ID'] == 'PLATE_ONLY_2_BLANKS').any())\n",
+    "    if (df['TUBE_OR_WELL_ID'] == 'PLATE_ONLY').any():\n",
     "        if v3_plate_only:\n",
     "            logging.error('found both bioscan v2 and v3 style PLATE_ONLY entries in manifest')\n",
-    "            raise ValueError('fix bioscan manifest version before proceeding')\n",
     "        else:\n",
     "            version_evidence['PLATE_ONLY'] = 'v2'\n",
     "    elif v3_plate_only:\n",
@@ -159,10 +158,10 @@
     "        msg = 'found conflicting evidence on bioscan version: '\n",
     "        for k, v in version_evidence.items():\n",
     "            msg += f'{k} suggests {v}, '\n",
-    "        logging.error(msg[:-2])\n",
-    "        raise ValueError('fix bioscan manifest version before proceeding')\n",
+    "        msg += f'using {version_evidence[\"CATCH_SOLUTION\"]} based on CATCH_SOLUTION column'\n",
+    "        logging.error(msg)\n",
+    "        # raise ValueError('fix bioscan manifest version before proceeding')\n",
     "        \n",
-    "    # returns only if all evidence is concordant\n",
     "    v = version_evidence['CATCH_SOLUTION']\n",
     "    logging.info(f'bioscan manifest {v} inferred')\n",
     "    \n",
