add BIOSCAN_SUPPLIER_SAMPLE_NAME column with controls labelling to sts output

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -1205,6 +1205,11 @@
     "        contrib_df['EMAIL ADDRESS'] + ';' + \\\n",
     "        contrib_df['CONTRIBUTION']\n",
     "    df['CONTRIBUTORS'] = '|'.join(list(contrib_series))\n",
+    "    # add supplier sample name prefixes to control samples\n",
+    "    df['BIOSCAN_SUPPLIER_SAMPLE_NAME'] = df['SPECIMEN_ID']\n",
+    "    df.loc[is_blank, 'BIOSCAN_SUPPLIER_SAMPLE_NAME'] = 'CONTROL_NEG_LYSATE_' + df['SPECIMEN_ID']\n",
+    "    df.loc[is_blank & (df['TUBE_OR_WELL_ID'] == 'G12'),\n",
+    "           'BIOSCAN_SUPPLIER_SAMPLE_NAME'] = 'CONTROL_POS_' + df['SPECIMEN_ID']\n",
     "    \n",
     "    if 'MISC_METADATA' in df.columns:\n",
     "        logging.info('dropping MISC_METADATA column')\n",
