more careful edge case handling

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -49,6 +49,9 @@
     "    template_df = get_data(template_fn, sheet='TAB 2 Metadata Entry')\n",
     "    check_columns(df, template_df, bioscan_version=v)\n",
     "    valid_dict = get_valid_dict(template_fn, validation_sheet='TAB 4 DO NOT EDIT - Data Valida')\n",
+    "    # update validation dictionary from v3 to v2\n",
+    "    if v == 'v2':\n",
+    "        valid_dict['SORTING_SOLUTION_USED'] += ['N']\n",
     "    contrib_df = validate_contributors(fn, contrib_sheet=contrib_sheet)\n",
     "\n",
     "    # orange cols\n",
@@ -68,7 +71,9 @@
     "    if v == 'v3':\n",
     "        validate_values('CATCH_SOLUTION', df[~is_blank], valid_dict)\n",
     "        df = strip_asterisks('CATCH_SOLUTION', df)\n",
-    "    validate_values('BOTTLE_DIRECTION', df[~is_blank], valid_dict) # TODO allow for blank in non-Malaise trap samples\n",
+    "    validate_values('BOTTLE_DIRECTION', \n",
+    "                    df[~is_blank & (df['COLLECTION_METHOD'] == 'MALAISE_TRAP')], # allow for blank in non-Malaise trap samples\n",
+    "                    valid_dict)\n",
     "    validate_regex('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED'])\n",
     "    validate_regex('DECIMAL_LATITUDE', df[~is_blank], na_values=[])\n",
     "    validate_regex('DECIMAL_LONGITUDE', df[~is_blank], na_values=[])\n",
@@ -159,18 +164,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b170f12",
+   "id": "6a82cc40",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20230823_js_batch9/NMCC_2304_BIOSCAN_Manifest_V2.0.xlsx'\n",
+    "fn = '../results/20230908_js_batch11/HIRW_2309_BIOSCAN_Manifest_V3.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', verbose=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a82cc40",
+   "id": "a8495f6e",
    "metadata": {},
    "outputs": [],
    "source": []
