--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -680,17 +680,22 @@
     "    invalid_values = col_values - valid_values\n",
     "    \n",
     "    if len(invalid_values) > 0:\n",
-    "        if sep:\n",
-    "            invalid_value_series = index_ranges(series[series.str.contains('|'.join(invalid_values), regex=True)])\n",
-    "        else:\n",
-    "            invalid_value_series = index_ranges(series[series.isin(invalid_values)])\n",
-    "        msg = f'invalid values in {col} column, SERIES {invalid_value_series}: {invalid_values}'\n",
-    "        if level == 'i':\n",
-    "            logging.info(msg)\n",
-    "        elif level == 'w':\n",
-    "            logging.warning(msg)\n",
-    "        elif level == 'e':\n",
-    "            logging.error(msg)\n",
+    "        for invalid_value in invalid_values:\n",
+    "            if invalid_value == '':\n",
+    "                invalid_value_series = index_ranges(series[series == ''])\n",
+    "            elif sep:\n",
+    "                # match pipe-separated\n",
+    "                invalid_value_series = index_ranges(series[series.str.contains(\n",
+    "                    r'(?:^|\\|)' + invalid_value + r'(?:$|\\|)', regex=True)])\n",
+    "            else:\n",
+    "                invalid_value_series = index_ranges(series[series.isin(invalid_values)])\n",
+    "            msg = f'invalid value in {col} column, SERIES {invalid_value_series}: \"{invalid_value}\"'\n",
+    "            if level == 'i':\n",
+    "                logging.info(msg)\n",
+    "            elif level == 'w':\n",
+    "                logging.warning(msg)\n",
+    "            elif level == 'e':\n",
+    "                logging.error(msg)\n",
     "            \n",
     "#     else:\n",
     "#         logging.info('all values valid in {!r}'.format(col))\n",
@@ -890,7 +895,7 @@
     "    }\n",
     "    \n",
     "    expected_ranks = {\n",
-    "            'order':('class','subclass','order'),\n",
+    "            'order':('class','subclass','superorder','order','suborder'),\n",
     "            'family':('suborder','superfamily','family','subfamily','tribe','subtribe'),\n",
     "            'genus':('genus','subgenus'),\n",
     "            'species':('species')\n",
@@ -1206,10 +1211,10 @@
     "        contrib_df['CONTRIBUTION']\n",
     "    df['CONTRIBUTORS'] = '|'.join(list(contrib_series))\n",
     "    # add supplier sample name prefixes to control samples\n",
-    "    df['BIOSCAN_SUPPLIER_SAMPLE_NAME'] = df['SPECIMEN_ID']\n",
-    "    df.loc[is_blank, 'BIOSCAN_SUPPLIER_SAMPLE_NAME'] = 'CONTROL_NEG_LYSATE_' + df['SPECIMEN_ID']\n",
-    "    df.loc[is_blank & (df['TUBE_OR_WELL_ID'] == 'G12'),\n",
-    "           'BIOSCAN_SUPPLIER_SAMPLE_NAME'] = 'CONTROL_POS_' + df['SPECIMEN_ID']\n",
+    "#     df['BIOSCAN_SUPPLIER_SAMPLE_NAME'] = df['SPECIMEN_ID']\n",
+    "#     df.loc[is_blank, 'BIOSCAN_SUPPLIER_SAMPLE_NAME'] = 'CONTROL_NEG_LYSATE_' + df['SPECIMEN_ID']\n",
+    "#     df.loc[is_blank & (df['TUBE_OR_WELL_ID'] == 'G12'),\n",
+    "#            'BIOSCAN_SUPPLIER_SAMPLE_NAME'] = 'CONTROL_POS_' + df['SPECIMEN_ID']\n",
     "    \n",
     "    if 'MISC_METADATA' in df.columns:\n",
     "        logging.info('dropping MISC_METADATA column')\n",
