anospp returns fix

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -61,7 +61,7 @@
     "    \n",
     "    # orange cols\n",
     "    # RACK_OR_PLATE_ID, TUBE_OR_WELL_ID\n",
-    "    df, gal = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')\n",
+    "    df, gal, partner_code = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')\n",
     "    # check blanks\n",
     "    is_blank = check_blanks(df)\n",
     "    if df[~is_blank].shape[0] == 0:\n",
@@ -160,8 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20230814_olaitan_2_re_re/Anopheles_Metadata_Manifest_V4.0_EKUW - 14.08.2023 - antivec samples.xlsx'\n",
-    "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors')"
+    "fn = '../results/20230911_drc/Maniferst_DRC_ VectorLink_Filled.xlsx'\n",
+    "df = validate_anospp(fn, template_fn, samples_sheet='A remplir', contrib_sheet='TAB 1 Contributors')"
    ]
   },
   {
