init bold parsing

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "def validate_bioscan(fn, template_fn='../data/BIOSCAN_Manifest_V3_20230818.xlsx', \n",
     "                     samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', \n",
-    "                     verbose=False, write_sts=True):\n",
+    "                     verbose=False, write_sts=True, bold_input=False):\n",
     "    '''\n",
     "    BIOSCAN partner manifest validation\n",
     "    Validation follows the order of columns order in data entry sheet\n",
@@ -32,7 +32,11 @@
     "    logging.info(f'# manifest \"{fn}\"')\n",
     "\n",
     "    # read data\n",
-    "    df = get_data(fn, sheet=samples_sheet)\n",
+    "    template_df = get_data(template_fn, sheet='TAB 2 Metadata Entry')\n",
+    "    if bold_input:\n",
+    "        df = parse_bold(fn, template_df, sheet='BGE entry')\n",
+    "    else:\n",
+    "        df = get_data(fn, sheet=samples_sheet)\n",
     "    df = fix_date_formats(df)\n",
     "    # check manifest verison\n",
     "    v = infer_bioscan_version(df)\n",
@@ -46,13 +50,15 @@
     "    ncbi = ete3.NCBITaxa()\n",
     "    \n",
     "    # prepare for validation\n",
-    "    template_df = get_data(template_fn, sheet='TAB 2 Metadata Entry')\n",
     "    check_columns(df, template_df, bioscan_version=v)\n",
     "    valid_dict = get_valid_dict(template_fn, validation_sheet='TAB 4 DO NOT EDIT - Data Valida')\n",
     "    # update validation dictionary from v3 to v2\n",
     "    if v == 'v2':\n",
     "        valid_dict['SORTING_SOLUTION_USED'] += ['N']\n",
-    "    contrib_df = validate_contributors(fn, contrib_sheet=contrib_sheet)\n",
+    "    if bold_input:\n",
+    "        contrib_df = validate_contributors(template_fn, contrib_sheet=contrib_sheet)\n",
+    "    else:\n",
+    "        contrib_df = validate_contributors(fn, contrib_sheet=contrib_sheet)\n",
     "\n",
     "    # orange cols\n",
     "    validate_regex('CATCH_LOT', df, na_values=[])\n",
@@ -115,6 +121,10 @@
     "    \n",
     "    df = expand_plate_only(df)\n",
     "    df = add_sts_cols(df, contrib_df, gal, bioscan=True, v=v)\n",
+    "    if bold_input:\n",
+    "        logging.info('Replacing CONTRIBUTORS with IDENTIFIED_BY for BOLD manifest')\n",
+    "        df['CONTRIBUTORS'] = df['IDENTIFIED_BY']\n",
+    "    \n",
     "    \n",
     "    # keep filename operations together\n",
     "    validate_input_filename(fn, partner_code, v)\n",
@@ -168,14 +178,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20230908_js_batch11/HIRW_2309_BIOSCAN_Manifest_V3.xlsx'\n",
+    "fn = '../results/20230925_js_batch13/JHGS_2309_BIOSCAN_Manifest_V3_am60.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', verbose=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8495f6e",
+   "id": "0304ddd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fn = '../results/20231006_bold_test/BGE_single_specimen_metadata&biobanking_sheet_v5_Yulia_Guglia_Diptera_12_plates.xlsx'\n",
+    "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', \n",
+    "                      verbose=False, bold_input=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40a9e9aa",
    "metadata": {},
    "outputs": [],
    "source": []
