--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "anospp_fn = '../data/Anopheles_Metadata_Manifest_V4.0_20221220.xlsx'\n",
-    "biosc_fn = '../data/BIOSCAN_Manifest_V2.0_20230727.xlsx'"
+    "biosc_fn = '../data/BIOSCAN_Manifest_V3_20230818.xlsx'"
    ]
   },
   {
@@ -101,6 +101,170 @@
     "    return df\n",
     "\n",
     "# df = get_data(anospp_fn, sheet='TAB 3 TEST Metadata Entry')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_bold(fn, template_df, sheet):\n",
+    "    \n",
+    "    logging.info(f'parsing bold manifest from \"{fn}\" sheet \"{sheet}\"')\n",
+    "    \n",
+    "    df = pd.read_excel(fn, dtype=str, keep_default_na=False,\n",
+    "                       sheet_name=sheet, header=3).iloc[3:]\n",
+    "    \n",
+    "    df.index = (i + 1 for i in range(df.shape[0]))\n",
+    "    df.index.name = 'SERIES'\n",
+    "    \n",
+    "    col_mapping = {\n",
+    "#         'Sample ID'\n",
+    "        'Plate ID':'RACK_OR_PLATE_ID',\n",
+    "        'Well Position':'TUBE_OR_WELL_ID',\n",
+    "        'Field ID':'COLLECTOR_SAMPLE_ID',\n",
+    "#         'Museum ID'\n",
+    "#         'Collection Code'\n",
+    "#         'Institution Storing'\n",
+    "#         'institution ID'\n",
+    "#         'Additional ID'\n",
+    "#         'Type of Additional ID'\n",
+    "#         'Phylum'\n",
+    "#         'Class'\n",
+    "        'Order':'PREDICTED_ORDER_OR_GROUP',\n",
+    "        'Family':'PREDICTED_FAMILY',\n",
+    "#         'Subfamily'\n",
+    "#         'Tribe'\n",
+    "        'Genus':'PREDICTED_GENUS',\n",
+    "        'Species':'PREDICTED_SCIENTIFIC_NAME',\n",
+    "#         'Subspecies'\n",
+    "        'Identifier':'IDENTIFIED_BY',\n",
+    "#         'Identifier ORCID'\n",
+    "#         'Identifier Email'\n",
+    "#         'Identification Method'\n",
+    "#         'Identification Date'\n",
+    "#         'Taxonomy Notes'\n",
+    "        'Sex':'SEX',\n",
+    "#         'Reproduction'\n",
+    "        'Life Stage':'LIFESTAGE',\n",
+    "#         'Extra Info'\n",
+    "#         'Notes'\n",
+    "#         'Voucher Status'\n",
+    "        'Voucher preservation':'PRESERVATIVE_SOLUTION',\n",
+    "#         'Type Status'\n",
+    "        'Tissue Descriptor':'ORGANISM_PART',\n",
+    "#         'External URLs'\n",
+    "#         'Associated Taxa'\n",
+    "#         'Associated Specimens'\n",
+    "#         'Collectors'\n",
+    "        'Collection Date':'DATE_OF_COLLECTION',\n",
+    "        'Country/ Ocean':'COUNTRY_OF_COLLECTION',\n",
+    "#         'State/ Province'\n",
+    "#         'Region'\n",
+    "#         'Sector'\n",
+    "        'Exact Site':'COLLECTION_LOCATION',\n",
+    "        'Lat':'DECIMAL_LATITUDE',\n",
+    "        'Lon':'DECIMAL_LONGITUDE',\n",
+    "#         'GPS Source'\n",
+    "        'Elev':'ELEVATION',\n",
+    "#         'Elevation Precision'\n",
+    "#         'Depth'\n",
+    "#         'Depth Precision'\n",
+    "#         'Coordinate Accuracy'\n",
+    "#         'Event Time'\n",
+    "#         'Collection Date Accuracy'\n",
+    "#         'Collection End Date'\n",
+    "        'Habitat':'HABITAT',\n",
+    "        'Sampling Protocol':'DESCRIPTION_OF_COLLECTION_METHOD',\n",
+    "#         'Collection Notes'\n",
+    "#         'Site Code'\n",
+    "#         'Collection Event ID'\n",
+    "#         'Tissue biobanked?'\n",
+    "#         'Tissue Biobank ID'\n",
+    "#         '2D Barcode ID Tissue'\n",
+    "#         'Tissue Biobank Name'\n",
+    "#         'Biobanked tissue type'\n",
+    "#         'Preparation type (Tissue)'\n",
+    "#         'Preservation history'\n",
+    "#         'Relation To Voucher'\n",
+    "#         'DNA Biobank ID'\n",
+    "#         '2D Barcode ID DNA'\n",
+    "#         'DNA Biobank Name'\n",
+    "#         'Preparation Type (DNA)'\n",
+    "#         'Extraction Method'\n",
+    "#         'Extraction Date'\n",
+    "#         'Extraction Staff or Lab'\n",
+    "#         'DNA Concentration [ng/µL]'\n",
+    "#         'Quantification Method'\n",
+    "#         'Quantification Date'\n",
+    "#         'DNA Volume [µL]'\n",
+    "#         'GGBN Upload Mechanism'\n",
+    "        'BIOSAMPLE_ID':'biosample ID',\n",
+    "        'INSDC_PROJECT_ID':'INSDC project ID'\n",
+    "        # 'Permits'\n",
+    "    }\n",
+    "    \n",
+    "    df.rename(columns=col_mapping, inplace=True)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    # reorder columns, add missing, remove \"LEAVE BLANK\" values\n",
+    "    for col in template_df.columns:\n",
+    "        if col not in df.columns:\n",
+    "            df[col] = ''\n",
+    "        else:\n",
+    "            df[col].replace({\n",
+    "                'LEAVE BLANK':''\n",
+    "            }, inplace=True)\n",
+    "    df = df[template_df.columns]\n",
+    "    \n",
+    "    # contents adjustments\n",
+    "    df['TUBE_OR_WELL_ID'] = df['TUBE_OR_WELL_ID'].str.replace(\n",
+    "        '([A-H])0', r'\\1', regex=True\n",
+    "    )\n",
+    "    df['SEX'] = df['SEX'].str.upper()\n",
+    "    df['LIFESTAGE'] = df['LIFESTAGE'].str.upper()\n",
+    "    df['ORGANISM_PART'] = df['ORGANISM_PART'].str.upper().str.replace(', ', ' | ')\n",
+    "    df['ORGANISM_PART'].replace({\n",
+    "        'ORGANISM':'WHOLE_ORGANISM',\n",
+    "        'WHOLE SPECIMEN':'WHOLE_ORGANISM',\n",
+    "        'WING':'OTHER_SOMATIC_TISSUE'\n",
+    "    }, inplace=True)\n",
+    "    df['PRESERVATIVE_SOLUTION'].replace({\n",
+    "        'ethanol':'V%_ETHANOL',\n",
+    "        'dry':'NONE'\n",
+    "    }, inplace=True)\n",
+    "    df['DATE_OF_COLLECTION'] = df['DATE_OF_COLLECTION'].str.split('/').str.get(-1)\n",
+    "    df['DATE_OF_COLLECTION'] = pd.to_datetime(df['DATE_OF_COLLECTION'], errors='coerce') \\\n",
+    "            .dt.strftime('%Y-%m-%d') \\\n",
+    "            .fillna('')\n",
+    "    species_identified = (df['PREDICTED_SCIENTIFIC_NAME'].str.contains('[a-z]', regex=True))\n",
+    "    df.loc[species_identified, 'PREDICTED_SCIENTIFIC_NAME'] = df.loc[species_identified, 'PREDICTED_GENUS'].str.title() + \\\n",
+    "            ' ' + df.loc[species_identified, 'PREDICTED_SCIENTIFIC_NAME'].str.lower()\n",
+    "    \n",
+    "    # blanks handling\n",
+    "    for i, r in df[df['ORGANISM_PART'] == ''].iterrows():\n",
+    "        df.loc[i, 'ORGANISM_PART'] = 'NOT_APPLICABLE'\n",
+    "        if r['TUBE_OR_WELL_ID'] == 'A1':\n",
+    "            raise ValueError(f'Cannot handle blanks at A1, row {i+1}')\n",
+    "        df.loc[i, 'RACK_OR_PLATE_ID'] = df.loc[i-1, 'RACK_OR_PLATE_ID']\n",
+    "        df.loc[i, 'PRESERVATIVE_SOLUTION'] = df.loc[i-1, 'PRESERVATIVE_SOLUTION']\n",
+    "        \n",
+    "    is_blank = (df['ORGANISM_PART'] == 'NOT_APPLICABLE')\n",
+    "        \n",
+    "    # auto-fill\n",
+    "    df['CATCH_LOT'] = 'NOT_APPLICABLE'\n",
+    "    df.loc[~is_blank, 'CATCH_SOLUTION'] = df['PRESERVATIVE_SOLUTION']\n",
+    "    df.loc[~is_blank, 'BOTTLE_DIRECTION'] = 'NOT_APPLICABLE'\n",
+    "    df.loc[df['DESCRIPTION_OF_COLLECTION_METHOD'].str.contains('pan trap'), 'COLLECTION_METHOD'] = 'PAN_TRAP'\n",
+    "    df.loc[~is_blank, 'AMOUNT_OF_CATCH_PLATED'] = 'NOT_APPLICABLE'\n",
+    "    \n",
+    "    return df\n",
+    "# template_df = get_data(biosc_fn, sheet='TAB 2 Metadata Entry')\n",
+    "# bold_fn = '../results/20231006_bold_test/BGE_single_specimen_metadata&biobanking_sheet_v5_Kaliuzhna_Braconidae.xlsx'\n",
+    "# df = parse_bold(bold_fn, template_df, 'BGE entry')\n",
+    "# df"
    ]
   },
   {
