update conventions for BGE partners

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -632,6 +632,9 @@
     "        logging.error(f'plate names {wrong_plate_names.to_list()} do not match template ABCD_1234')\n",
     "    # check plate name prefixes against partner codes\n",
     "    # and assign GAL\n",
+    "    if bioscan:\n",
+    "        # strip TOL prefix from plates\n",
+    "        plates = plates.str.replace('TOL-', '', regex=True)\n",
     "    plate_prefixes = plates.str.slice(0,4)\n",
     "    if bioscan:\n",
     "        partners_df = pd.read_csv(bioscan_partners_fn, sep='\\t', dtype=str)\n",
