do not strip asterisks - required for validation

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -70,9 +70,9 @@
     "        logging.error('no non-blank samples to validate, terminating')\n",
     "        return df\n",
     "    validate_values('ORGANISM_PART', df, valid_dict, sep='|')\n",
-    "    df = strip_asterisks('ORGANISM_PART', df)\n",
+    "#     df = strip_asterisks('ORGANISM_PART', df)\n",
     "    validate_values('PRESERVATIVE_SOLUTION', df, valid_dict)\n",
-    "    df = strip_asterisks('PRESERVATIVE_SOLUTION', df)\n",
+    "#     df = strip_asterisks('PRESERVATIVE_SOLUTION', df)\n",
     "    # columns below validated for non-blank samples only\n",
     "    if v == 'v3':\n",
     "        validate_values('CATCH_SOLUTION', df[~is_blank], valid_dict)\n",
