auto-change wing to other somatic tissue

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -69,6 +69,11 @@
     "    if df[~is_blank].shape[0] == 0:\n",
     "        logging.error('no non-blank samples to validate, terminating')\n",
     "        return df\n",
+    "    # hope to get WING into STS ORGANISM_PART values later, fixing on our side for now\n",
+    "    if df['ORGANISM_PART'].str.contains('WING').any():\n",
+    "        logging.warning('replacing ORGANISM_PART \"WING\" entries with “**OTHER_SOMATIC_ANIMAL_TISSUE**”')\n",
+    "        df['ORGANISM_PART'] = df['ORGANISM_PART'] \\\n",
+    "                .str.replace('WING', '**OTHER_SOMATIC_ANIMAL_TISSUE**', regex=False)\n",
     "    validate_values('ORGANISM_PART', df, valid_dict, sep='|')\n",
     "#     df = strip_asterisks('ORGANISM_PART', df)\n",
     "    validate_values('PRESERVATIVE_SOLUTION', df, valid_dict)\n",
@@ -178,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20230925_js_batch13/JHGS_2309_BIOSCAN_Manifest_V3_am60.xlsx'\n",
+    "fn = '../results/20231013_js_batch19/WFEN_202309_BIOSCAN_Manifest_V3.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', verbose=False)"
    ]
   },
