clean up anospp nb

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -119,6 +119,8 @@
     "\n",
     "    logging.info('# ended validate_anospp_partner_manifest')\n",
     "    \n",
+    "    print('\\n'.join(df.RACK_OR_PLATE_ID.unique()))\n",
+    "    \n",
     "    return df\n",
     "\n",
     "fn = '../data/Anopheles_Metadata_Manifest_V4.0_20221220.xlsx'\n",
@@ -160,8 +162,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20230911_drc/Maniferst_DRC_ VectorLink_Filled.xlsx'\n",
-    "df = validate_anospp(fn, template_fn, samples_sheet='A remplir', contrib_sheet='TAB 1 Contributors')"
+    "fn = '../results/20231019_a_poal_adad/Anopheles_Metadata_Manifest_V4.0_POAL_101623_am60.xlsx'\n",
+    "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors')"
    ]
   },
   {
