amend specimen id risk message

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -720,7 +720,7 @@
     "    expected_wells = [r + str(c) for (c,r) in itertools.product(col_id, row_id)]\n",
     "    \n",
     "    blank_wells = {\n",
-    "        'PLATE_ONLY':['H12'], # v2\n",
+    "        'PLATE_ONLY':['G12','H12'], # v2\n",
     "        'PLATE_ONLY_1_BLANK':['H12'], # v3\n",
     "        'PLATE_ONLY_2_BLANKS':['G12','H12'], # v3\n",
     "    }\n",
@@ -1262,7 +1262,7 @@
     "    \n",
     "    if invalid_risk.any():\n",
     "        logging.error(f'SERIES {index_ranges(df.loc[invalid_risk])}: with no PREDICTED_SCIENTIFIC_NAME, '\n",
-    "                      f'SPECIMEN_IDENTITY_RISK values should be blank or \"Y\", not \"N\"')\n",
+    "                      f'SPECIMEN_IDENTITY_RISK values should be blank, not \"N\"')\n",
     "\n",
     "# validate_specimen_id_risk(df)"
    ]
