fix email address column name

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -515,7 +515,13 @@
     "    \n",
     "    df = remove_trailing_spaces(df)\n",
     "    \n",
-    "    expected_columns = ['SURNAME','FIRST_NAME','PRIMARY_AFFILIATION','EMAIL ADDRESS','CONTRIBUTION','CONFIRMATION']\n",
+    "    if 'EMAIL ADDRESS' in df.columns:\n",
+    "        logging.warning('replacing \"EMAIL ADDRESS\" with \"EMAIL_ADDRESS\" contributors column name')\n",
+    "        df.rename(columns={\n",
+    "               \"EMAIL ADDRESS\": \"EMAIL_ADDRESS\",\n",
+    "        }, inplace=True)\n",
+    "\n",
+    "    expected_columns = ['SURNAME','FIRST_NAME','PRIMARY_AFFILIATION','EMAIL_ADDRESS','CONTRIBUTION','CONFIRMATION']\n",
     "    \n",
     "    if set(df.columns) != set(expected_columns):\n",
     "        ec = set(df.columns) - set(expected_columns)\n",
@@ -538,11 +544,10 @@
     "        logging.error('duplicated contributor names {}'.format(\n",
     "                df.loc[is_dup_name, 'FULL_NAME'].to_list()))\n",
     "    \n",
-    "    # TODO update template with underscore in email column\n",
-    "    is_valid_email = df['EMAIL ADDRESS'].str.match('^[A-z0-9._%+-]+@[A-z0-9.-]+\\.[A-z]{2,}$')\n",
+    "    is_valid_email = df['EMAIL_ADDRESS'].str.match(r'^[A-z0-9._%+-]+@[A-z0-9.-]+\\.[A-z]{2,}$')\n",
     "    if not is_valid_email.all():\n",
     "        logging.error('invalid contributor email addresses {}'.format(\n",
-    "                df.loc[~is_valid_email, 'EMAIL ADDRESS'].to_list()))\n",
+    "                df.loc[~is_valid_email, 'EMAIL_ADDRESS'].to_list()))\n",
     "    \n",
     "    is_confirmed = (df['CONFIRMATION'] == 'YES')\n",
     "    if not is_confirmed.any():\n",
@@ -1374,7 +1379,7 @@
     "    # add contributors - delimiters checked in validate_contributors\n",
     "    contrib_series = contrib_df['FULL_NAME'] + ';' + \\\n",
     "        contrib_df['PRIMARY_AFFILIATION'] + ';' + \\\n",
-    "        contrib_df['EMAIL ADDRESS'] + ';' + \\\n",
+    "        contrib_df['EMAIL_ADDRESS'] + ';' + \\\n",
     "        contrib_df['CONTRIBUTION']\n",
     "    df['CONTRIBUTORS'] = '|'.join(list(contrib_series))\n",
     "    # add supplier sample name prefixes to control samples\n",
