remove extra info for blank samples, lower msg to info

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -803,9 +803,9 @@
     "                       'OTHER_INFORMATION','MISC_METADATA']:\n",
     "            excessive_blank_info_df = blank_df[blank_df[col] != '']\n",
     "            if excessive_blank_info_df.shape[0] > 0:\n",
-    "                logging.error(f'{col} column values non-empty for blank samples '\n",
-    "                              f'at SERIES {index_ranges(excessive_blank_info_df)} - these should be deleted')\n",
-    "            \n",
+    "                logging.info(f'{col} column values non-empty for blank samples '\n",
+    "                              f'at SERIES {index_ranges(excessive_blank_info_df)} - these will be deleted')\n",
+    "                df.loc[is_blank, col] = ''\n",
     "    \n",
     "    logging.info(f'{is_blank.sum()} blanks located across {df.RACK_OR_PLATE_ID.nunique()} plates, '\n",
     "                 f'{non_blank_df.shape[0]} non-blank samples will be further validated')\n",
