extra check for duration of collection in hours

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -593,10 +593,8 @@
     "                         'like ///one.two.three'),\n",
     "        'TIME_OF_COLLECTION': (r'^(?:[01]\\d|2[0-3]):[0-5]\\d$|^(?:[01]\\d|2[0-3]):[0-5]\\d:[0-5]\\d$', \n",
     "                              'in HH:MM format'),\n",
-    "        'DURATION_OF_COLLECTION': (r'^PT(\\d+)H$', \n",
-    "                                   'in PT[n]H format'),\n",
-    "        #'DURATION_OF_COLLECTION': (r'^P(?:\\d+Y)?(?:\\d+M)?(?:\\d+D)?(?:T(?:\\d+H)?(?:\\d+M)?(?:\\d+S)?)?$', \n",
-    "        #                           'in P[n]Y[n]M[n]DT[n]H[n]M[n]S format'),\n",
+    "        'DURATION_OF_COLLECTION': (r'^P(?:\\d+Y)?(?:\\d+M)?(?:\\d+D)?(?:T(?:\\d+H)?(?:\\d+M)?(?:\\d+S)?)?$', \n",
+    "                                  'in P[n]Y[n]M[n]DT[n]H[n]M[n]S format'),\n",
     "        'DATE_OF_PLATING': (date_regex, 'in YYYY-MM-DD format'),\n",
     "        'DATE_OF_PRESERVATION': (date_regex, 'in YYYY-MM-DD format'),\n",
     "        'ELEVATION': (numeric_regex, 'only a number (in metres)'),\n",
@@ -614,6 +612,15 @@
     "            logging.warning(msg)\n",
     "        else:\n",
     "            logging.error(msg)\n",
+    "    # extra check for duration of collection\n",
+    "    if col == 'DURATION_OF_COLLECTION':\n",
+    "        is_recommended_regex = series.str.match(r'^PT(\\d+)H$')\n",
+    "        if not is_recommended_regex.all():\n",
+    "            offending_values = list(series[~is_recommended_regex & is_valid_regex].unique())\n",
+    "            s = index_ranges(series[~is_recommended_regex & is_valid_regex])\n",
+    "        msg = (f'{col} format suggestion for SERIES {s}: found {offending_values} - '\n",
+    "              f'should be in PT[n]H format')\n",
+    "        logging.warning(msg)\n",
     "        "
    ]
   },
